[package]
name = "proverb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["full"] }
google-sheets4 = "*"
serde = "^1.0"
serde_json = "^1.0"
serenity = "0.12"
